--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -388,10 +388,10 @@ h4 {
 .content {
 	position: absolute;
 	top: 0;
-	left: 350px;
-	right: 250px;
+	left: 300px;
+	right: 300px;
 	bottom: 0;
-	padding: 50px 10px 10px 10px;
+	padding: 20px 10px 10px 10px;
 	box-sizing: content-box;
 }
 
@@ -414,7 +414,7 @@ h4 {
 	top: 0;
 	left: 0;
 	bottom: 0;
-	width: 350px;
+	width: 300px;
 }
 
 .sidebar.right {
@@ -422,7 +422,7 @@ h4 {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	width: 250px;
+	width: 300px;
 }
 
 .sidebar .tab-content {
@@ -438,12 +438,11 @@ h4 {
 .sidebar .tab-pane {
 	margin: 0;
 	padding: 0;
-	padding-left: 14px;
+	padding: 0;
 }
 
 .sidebar .tab-content li {
 	color: $labelColor;
-	line-height: 1.75em;
 }
 
 .sidebar .tab-content li a {
@@ -451,11 +450,13 @@ h4 {
 	display: block;
 	width: 100%;
 	margin-bottom: 1px;
+	padding: 5px 5px 5px 15px !important;
 }
 
 .sidebar .tab-content li a:hover,
 .sidebar .tab-content li.ng-scope.selected a {
 	color: $accentColor;
+	background: rgba($accentColor, .1);
 }
 
 
