--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -1,149 +1,150 @@
 <div ng-controller="SettingsController as settings">
-	<script type="text/ng-template" id="addAccountDialog.html">
-		<div style="background: #222">
-			<div class="modal-header">
-				<button class="btn btn-default btn-header pull-right" type="button" ng-click="cancel()"><i class="zmdi zmdi-hc-fw"></i></button>
+    <script type="text/ng-template" id="addAccountDialog.html">
+        <div style="background: #222">
+            <div class="modal-header">
+                <button class="btn btn-default btn-header pull-right" type="button" ng-click="cancel()"><i class="zmdi zmdi-hc-fw"></i></button>
 
-				<h4 class="modal-title">Choose Account Provider</h4>
-			</div>
-			<div class="modal-body">
-				<ul class="list-view" style="clear:both">
-					<li ng-repeat="provider in providers">
-						<a ng-href="{{provider.InstallUrl}}" ng-click="showStatus(provider, $event)" target="_blank">
-							<div class="row list-item">
-								<div class="account pull-left"><i class="zmdi zmdi-hc-fw"></i></div>
-								<div class="loader pull-left collapse"></div>
-								<div class="ok pull-left collapse"><i class="zmdi zmdi-hc-fw"></i></div>
+                <h4 class="modal-title">Choose Account Provider</h4>
+            </div>
+            <div class="modal-body">
+                <ul class="list-view" style="clear:both">
+                    <li ng-repeat="provider in providers">
+                        <a ng-href="{{provider.InstallUrl}}" ng-click="showStatus(provider, $event)" target="_blank">
+                            <div class="row list-item">
+                                <div class="account pull-left"><i class="zmdi zmdi-hc-fw"></i></div>
+                                <div class="loader pull-left collapse"></div>
+                                <div class="ok pull-left collapse"><i class="zmdi zmdi-hc-fw"></i></div>
 
-								<b>{{provider.Title}}</b>
-								<br>
+                                <b>{{provider.Title}}</b>
+                                <br>
 
-								<span class="description">{{provider.Description}}</span>
-								<span class="status collapse">{{provider.Status}}</span>
-							</div>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</script>
+                                <span class="description">{{provider.Description}}</span>
+                                <span class="status collapse">{{provider.Status}}</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </script>
 
-	<div id="header">
-		<div class="row">
-			<div class="col">
-				<button class="btn btn-default btn-icn btn-header" ng-click="submit()"><i class="zmdi zmdi-hc-fw"></i></button>
-			</div>
+    <div id="header">
+        <div class="row">
+            <div class="col">
+                <button class="btn btn-default btn-icn btn-header" ng-click="submitAndReturn()"><i class="zmdi zmdi-hc-fw"></i></button>
+            </div>
 
-			<div class="col expand">
-				<h5 class="title">Preferences</h5>
-			</div>
+            <div class="col expand">
+                <h5 class="title">Preferences</h5>
+            </div>
 
-			<div class="col">
-				<button class="btn btn-default btn-icn btn-header" onclick="history.back()"><i class="zmdi zmdi-hc-fw"></i></button>
-			</div>
-		</div>
-	</div>
+            <div class="col">
+                <button class="btn btn-default btn-icn btn-header" onclick="history.back()"><i class="zmdi zmdi-hc-fw"></i></button>
+            </div>
+        </div>
+    </div>
 
-	<div id="body" style="width: 650px; margin-left: auto; margin-right: auto;">
-		<ul class="nav nav-pills text-center" role="tablist" id="tabs">
-			<li role="presentation" class="active"><a data-target="#user-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Profile</a></li>
-			<li role="presentation"><a data-target="#applications-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Apps</a></li>
-			<li role="presentation"><a data-target="#accounts-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Accounts</a></li>
-		</ul>
+    <div id="body" style="width: 650px; margin-left: auto; margin-right: auto;">
+        <ul class="nav nav-pills text-center" role="tablist" id="tabs">
+            <li role="presentation" class="active"><a data-target="#user-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Profile</a></li>
+            <li role="presentation"><a data-target="#applications-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Apps</a></li>
+            <li role="presentation"><a data-target="#accounts-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Accounts</a></li>
+        </ul>
 
-		<div class="tab-content" style="float: left; width: 600px;">
-			<!-- PROFILE -->
-			<div role="tabpanel" class="tab-pane fade active in" id="user-panel">
-				<form name="userForm" ng-controller="UserSettingsController as userSettings" ng-submit="submit()">
-					<div class="row">
-						<div class="col-md-12">
-							<!-- USER -->
-							<div class="form-group">
-								<input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
+        <div class="tab-content" style="float: left; width: 600px;">
+            <!-- PROFILE -->
+            <div role="tabpanel" class="tab-pane fade active in" id="user-panel">
+                <form name="userForm" ng-controller="UserSettingsController as userSettings" ng-submit="submit()">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <!-- USER -->
+                            <div class="form-group">
+                                <input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
 
-								<button id="photo-btn" class="btn img-avatar img-avatar-lg circular">
-									<img id="photo-img" src="{{userPhotoUrl}}" width="100" height="100">
-								</button>
+                                <button id="photo-btn" class="btn img-avatar img-avatar-lg circular">
+                                    <img id="photo-img" src="{{userPhotoUrl}}" width="100" height="100">
+                                </button>
 
-								<label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> Click to select your profile picture.</label>
+                                <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> Click to select your profile picture.</label>
 
-								<script type="text/javascript">
-									$('#photo-btn').on('click', function () {
-										$('#photo').click();
-									});
-								</script>
-							</div>
+                                <script type="text/javascript">
+                                    $('#photo-btn').on('click', function() {
+                                        $('#photo').click();
+                                    });
 
-							<div style="max-width: 500px;">
-								<div class="form-group">
-									<label for="name">Name</label>
-									<input type="text" class="form-control" id="name" name="name" placeholder="Name" size="30" ng-model="user.Name" ng-minlength="5" required>
-								</div>
+                                </script>
+                            </div>
 
-								<div class="form-group">
-									<label for="organization">Organization</label>
-									<input type="text" class="form-control" id="organization" name="organization" placeholder="Organization" ng-model="user.Organization">
-								</div>
+                            <div style="max-width: 500px;">
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" size="30" ng-model="user.Name" ng-minlength="5" required>
+                                </div>
 
-								<div class="form-group">
-									<label for="email">E-Mail Address</label>
-									<input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" ng-model="user.EmailAddress" ng-minlength="5" required>
-								</div>
-							</div>
-						</div>
-					</div>
-				</form>
-			</div>
-			<!-- AGENTS -->
-			<div role="tabpanel" class="tab-pane fade" id="applications-panel">
-				<form name="agentForm" ng-controller="AgentSettingsController as agentSettings">
+                                <div class="form-group">
+                                    <label for="organization">Organization</label>
+                                    <input type="text" class="form-control" id="organization" name="organization" placeholder="Organization" length="25" ng-model="user.Organization">
+                                </div>
 
-					<div>
-						<button class="btn btn-default btn-icn pull-right" style="margin: 0 -5px 15px 0;" ng-click="reload()"><i class="zmdi zmdi-hc-fw"></i></button>
+                                <div class="form-group">
+                                    <label for="email">E-Mail Address</label>
+                                    <input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" length="25" ng-model="user.EmailAddress" ng-minlength="5" required>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- AGENTS -->
+            <div role="tabpanel" class="tab-pane fade" id="applications-panel">
+                <form name="agentForm" ng-controller="AgentSettingsController as agentSettings">
 
-						<div class="clearfix"></div>
+                    <div>
+                        <button class="btn btn-default btn-icn pull-right" style="margin: 0 -5px 15px 0;" ng-click="reload()"><i class="zmdi zmdi-hc-fw"></i></button>
 
-						<div class="msg-error animate-show" ng-show="hasError" style="margin: 0 -5px 15px -5px;">
-							<h5>{{errorType}}</h5>
-							<label>{{errorMessage}}</label>
-						</div>
-					</div>
+                        <div class="clearfix"></div>
 
-					<ul class="list-view">
-						<li ng-repeat="agent in agents">
-							<div class="row" style="padding: 15px 10px; margin-bottom: 10px; border-top: 1px solid #333333;">
-								<div class="pull-right" style="margin-top: 2px;">
-									<input type="checkbox" ng-model="agent.pluginInstalled" ng-change="toggleInstall(agent)" data-size="small" bootstrap-switch/>
-								</div>
+                        <div class="msg-error animate-show" ng-show="hasError" style="margin: 0 -5px 15px -5px;">
+                            <h5>{{errorType}}</h5>
+                            <label>{{errorMessage}}</label>
+                        </div>
+                    </div>
 
-								<div ng-class="{disabled: !agent.pluginInstalled}" style="margin-right: 90px;">
-									<div class="pull-left">
-										<img ng-src="{{agent.iconSrc}}" width="48" height="48" />
-									</div>
+                    <ul class="list-view">
+                        <li ng-repeat="agent in agents">
+                            <div class="row" style="padding: 15px 10px; margin-bottom: 10px; border-top: 1px solid #333333;">
+                                <div class="pull-right" style="margin-top: 2px;">
+                                    <input type="checkbox" ng-model="agent.pluginInstalled" ng-change="toggleInstall(agent)" data-size="small" bootstrap-switch/>
+                                </div>
 
-									<div class="pull-left" style="padding-left: 15px;">
-										<h4 style="margin-top: 0px">{{agent.name}}</h4>
-										<label>Software version: {{agent.softwareVersion}}</label>
-										<br>
-										<label>Plugin version: {{agent.pluginVersion}}</label>
-									</div>
+                                <div ng-class="{disabled: !agent.pluginInstalled}" style="margin-right: 90px;">
+                                    <div class="pull-left">
+                                        <img ng-src="{{agent.iconSrc}}" width="48" height="48" />
+                                    </div>
 
-									<div class="pull-right">
-										<ng-color-picker selected-color="agent.color"></ng-color-picker>
-									</div>
+                                    <div class="pull-left" style="padding-left: 15px;">
+                                        <h4 style="margin-top: 0px">{{agent.name}}</h4>
+                                        <label>Software version: {{agent.softwareVersion}}</label>
+                                        <br>
+                                        <label>Plugin version: {{agent.pluginVersion}}</label>
+                                    </div>
 
-									<div class="clearfix"></div>
-								</div>
+                                    <div class="pull-right">
+                                        <ng-color-picker selected-color="agent.color"></ng-color-picker>
+                                    </div>
 
-								<div class="clearfix"></div>
-							</div>
-						</li>
-					</ul>
-				</form>
-			</div>
-			<!-- ACCOUNTS -->
-			<div role="tabpanel" class="tab-pane fade" id="accounts-panel">
-				<!--
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="clearfix"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            <!-- ACCOUNTS -->
+            <div role="tabpanel" class="tab-pane fade" id="accounts-panel">
+                <!--
 				<form name="agentForm" ng-controller="AgentSettingsController as agentSettings">
 					<div class="row">
 					</div>
@@ -164,17 +165,18 @@
 					</div>
 				</form>
 				-->
-			</div>
-		</div>
+            </div>
+        </div>
 
-		<script type="text/javascript">
-			$('#tabs a').click(function (e) {
-				e.preventDefault();
-				$(this).tab('show');
-			});
-		</script>
-	</div>
+        <script type="text/javascript">
+            $('#tabs a').click(function(e) {
+                e.preventDefault();
+                $(this).tab('show');
+            });
 
-	<div id="footer">
-	</div>
+        </script>
+    </div>
+
+    <div id="footer">
+    </div>
 </div>
