--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -294,10 +294,12 @@ h4 {
 	table-layout: fixed;
 }
 
+.table.row,
 #header .row {
 	display: table-row;
 }
 
+.table .col,
 #header .col {
 	display: table-cell;
 	box-sizing: border-box;
@@ -307,6 +309,7 @@ h4 {
 	text-align: center;
 }
 
+.table .col.expand,
 #header .col.expand {
 	width: 100% !important;
 }
@@ -860,4 +863,12 @@ input.form-control:focus {
 	background: $accentColor;
 	color: $accentTextColor;
 	border-radius: 0;
+}
+
+.hint {
+    background: $headerBackgroundColor;
+    border-radius: 3px;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
 }
