--- a/Artivity.Journal.Mac/Main.storyboard
+++ b/Artivity.Journal.Mac/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
         <plugIn identifier="com.apple.WebKitIBPlugin" version="9531"/>
     </dependencies>
@@ -119,11 +120,11 @@
                             </menuItem>
                         </items>
                     </menu>
-					<connections>
-						<outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m" />
-					</connections>
+                    <connections>
+                        <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
+                    </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider=""/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
@@ -154,7 +155,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1100" height="700"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <webView translatesAutoresizingMaskIntoConstraints="NO" id="ytq-eV-Q0m">
+                            <webView translatesAutoresizingMaskIntoConstraints="NO" id="ytq-eV-Q0m" customClass="BrowserView">
                                 <rect key="frame" x="0.0" y="0.0" width="1100" height="700"/>
                                 <webPreferences key="preferences" defaultFontSize="16" defaultFixedFontSize="13" minimumFontSize="0" plugInsEnabled="NO" javaEnabled="NO">
                                     <nil key="identifier"/>
@@ -174,7 +175,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="204" y="1114"/>
+            <point key="canvasLocation" x="264" y="1200"/>
         </scene>
     </scenes>
 </document>
