Started translating the labels in the journal.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -91,7 +91,7 @@
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Delete
 									</div>
 									<div ng-switch-default>
-										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> {{influence.description}}
+										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> {{ influence.change | translate }}
 									</div>
 								</div>
 
