--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col expand">
-                <h5 class="title">Preferences</h5>
+                <h5 class="title" translate="SETTINGS_TITLE"></h5>
             </div>
 
             <div class="col">
@@ -46,9 +46,9 @@
 
     <div id="body" style="width: 650px; margin-left: auto; margin-right: auto;">
         <ul class="nav nav-pills text-center" role="tablist" id="tabs">
-            <li role="presentation" class="active"><a data-target="#user-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Profile</a></li>
-            <li role="presentation"><a data-target="#applications-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Apps</a></li>
-            <li role="presentation"><a data-target="#accounts-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Accounts</a></li>
+            <li role="presentation" class="active"><a data-target="#user-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> {{ 'SETTINGS_PROFILE' | translate }}</a></li>
+            <li role="presentation"><a data-target="#applications-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> {{ 'SETTINGS_APPS' | translate }}</a></li>
+            <li role="presentation"><a data-target="#accounts-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> {{ 'SETTINGS_ACCOUNTS' | translate }}</a></li>
         </ul>
 
         <div class="tab-content">
@@ -65,7 +65,7 @@
                                     <img id="photo-img" src="{{userPhotoUrl}}" width="100" height="100">
                                 </button>
 
-                                <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> Click to select your profile picture.</label>
+                                <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> {{ 'SETTINGS_PROFILE_PICTURE' | translate }}</label>
 
                                 <script type="text/javascript">
                                     $('#photo-btn').on('click', function() {
@@ -77,17 +77,17 @@
 
                             <div style="max-width: 500px;">
                                 <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" size="30" ng-model="user.Name" ng-minlength="5" required>
+                                    <label for="name">{{ 'SETTINGS_NAME' | translate }}</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="{{ 'SETTINGS_NAME' | translate }}" size="30" ng-model="user.Name" ng-minlength="5" required>
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="organization">Organization</label>
-                                    <input type="text" class="form-control" id="organization" name="organization" placeholder="Organization" length="25" ng-model="user.Organization">
+                                    <label for="organization">{{'SETTINGS_ORGANIZATION' | translate}}</label>
+                                    <input type="text" class="form-control" id="organization" name="organization" placeholder="{{'SETTINGS_ORGANIZATION' | translate}}" length="25" ng-model="user.Organization">
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="email">E-Mail Address</label>
+                                    <label for="email">{{'SETTINGS_EMAIL' | translate}}</label>
                                     <input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" length="25" ng-model="user.EmailAddress" ng-minlength="5" required>
                                 </div>
                             </div>
