Reduced contrast of title bar separator line in Journal.

--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -266,7 +266,7 @@ h4 {
 /* line 293, /Users/sebastian/Projects/2016/Artivity/Artivity.Apid.Modules.Journal/app/css/style.scss */
 #header {
   display: table;
-  border-top: 1px solid #1D1D1D;
+  border-top: 1px solid #262626;
   background: #333333;
   color: #FFFFFF;
   width: 100%;
