--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -16,7 +16,7 @@
 			</div>
 
 			<div class="col" style="width: 100px;">
-				<div id="export-btn" class="btn btn-default" ng-click="exportFile()"><i class="zmdi zmdi-hc-fw zmdi-archive"></i> Export</div>
+				<a id="export-btn" class="btn btn-header" ng-click="exportFile()"><i class="zmdi zmdi-hc-fw zmdi-archive"></i></a>
 			</div>
 		</div>
 	</div>
@@ -211,7 +211,7 @@
 				</div>
 			</div>
 			<div class="col-playback-chart">
-				<div gantt-chart chart-data="activities"></div>
+				<div art-timeline art-data="activities"></div>
 			</div>
 		</div>
 	</div>
