--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -15,7 +15,7 @@
 				<h5 class="title">{{file.label}}</h5>
 			</div>
 
-			<div class="col" style="width: 100px;">
+			<div class="col">
 				<a id="export-btn" class="btn btn-header" ng-click="exportFile()"><i class="zmdi zmdi-hc-fw zmdi-archive"></i></a>
 			</div>
 		</div>
